--- a/src/pages/merInfo/index.wxss
+++ b/src/pages/merInfo/index.wxss
@@ -1,3 +1,7 @@
+.basic-info {
+  z-index: 50;
+}
+
 .basic-info .mer-images .mer-images-guid .grid-item {
   margin: 0;
   padding: 0;
@@ -37,4 +41,121 @@
 
 .basic-info .mer-images .mer-images-guid .grid-item .item-images-block-add:active {
   background-color: #f2f3f5;
+}
+
+.basic-info .address-region {
+  display: inline-block;
+  text-align: left;
+  width: 1000%;
+}
+
+.basic-info .address-region .address-region-value {
+  display: inline-block;
+  color: #333;
+}
+
+.basic-info .address-region .address-region-block {
+  width: 100%;
+}
+
+.basic-info .open-time {
+  display: inline-block;
+  text-align: left;
+  width: 100%;
+  position: relative;
+}
+
+.basic-info .open-time .open-time-picker {
+  width: 135rpx;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.basic-info .open-time .open-time-picker .open-time-value {
+  display: inline-block;
+  color: #333;
+}
+
+.basic-info .but-save {
+  margin-top: 50rpx;
+}
+
+.display_none {
+  display: none;
+}
+
+.display_none {
+  visibility: hidden;
+}
+
+.datetime-picker {
+  position: sticky;
+  top: 0px;
+}
+
+.tag-info .custom-van-tag {
+  margin-left: 20rpx;
+  margin-top: 20rpx;
+  font-size: 30rpx;
+}
+
+.popup-tag {
+  width: 100%;
+  height: 100%;
+}
+
+.popup-tag .popup-tag-main {
+  width: 100%;
+  height: 100%;
+}
+
+.popup-tag .popup-tag-main .tag-top-bottom {
+  width: 100%;
+  position: relative;
+  height: 80rpx;
+  line-height: 80rpx;
+}
+
+.popup-tag .popup-tag-main .tag-top-bottom .popup-tag-close {
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+  position: absolute;
+  display: inline-block;
+  left: 0;
+  color: #1989fa;
+  font-size: 14px;
+}
+
+.popup-tag .popup-tag-main .tag-top-bottom .popup-tag-ok {
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+  position: absolute;
+  display: inline-block;
+  right: 0;
+  color: #1989fa;
+  font-size: 14px;
+}
+
+.popup-tag .popup-tag-main .popup-tag-list {
+  margin-top: 20rpx;
+  width: 100%;
+}
+
+.popup-tag .popup-tag-main .custom-button-tag {
+  margin-left: 20rpx;
+}
+
+.popup-tag .popup-tag-main .custom-van-tag {
+  margin-left: 20rpx;
+  margin-top: 20rpx;
+  font-size: 30rpx;
+}
+
+.popup-tag .popup-tag-text {
+  margin: 0;
+  font-weight: 400;
+  font-size: 30rpx;
+  color: rgba(69, 90, 100, 0.6);
+  padding: 35rpx 15rpx 15rpx;
 }
