--- a/src/pages/merInfo/index.scss
+++ b/src/pages/merInfo/index.scss
@@ -1,6 +1,6 @@
 .basic-info { 
-  .mer-images {
-    .mer-images-guid{
+  .basic-info-images {
+    .basic-info-images-guid{
         .grid-item{
             .item-images-block{
                 .item-images {
@@ -20,8 +20,18 @@
                     // width: 100%;
                     // height: 100%;
                     position: absolute;
-                    top: 50%; 
-                    left:35%;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    left: 0;
+                    height: 50rpx;
+                    width: 50rpx;
+                    margin: auto;
+                    // top: 50%; 
+                    // left:50%;
+                    // height: 30%;
+                    // width: 50%;
+                    // margin: -15% 0 0 -25%;
                     // overflow: auto;
                 }
                 width: 30%;
@@ -99,6 +109,8 @@
         font-size: 30rpx;
     }
 }
+
+
 
 .popup-tag{  
     width: 100%;
