--- a/src/app.scss
+++ b/src/app.scss
@@ -1,12 +1,17 @@
 Page {
-    background: #f7f7f7;
-    font-size: 28rpx;
-    color: #333333;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Liberation Sans","PingFang SC","Microsoft YaHei","Hiragino Sans GB","Wenquanyi Micro Hei","WenQuanYi Zen Hei","ST Heiti",SimHei,"WenQuanYi Zen Hei Sharp",sans-serif;
-  }
-  
-  .main {
-    margin-top: 10rpx
-  }
+  background: #f7f7f7;
+  font-size: 28rpx;
+  color: #333333;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Liberation Sans", "PingFang SC", "Microsoft YaHei", "Hiragino Sans GB", "Wenquanyi Micro Hei",
+    "WenQuanYi Zen Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
+}
 
- 
+.main {
+  display: inline; 
+  margin-top: 10rpx; 
+}
+
+.main-hide {
+  display: none;
+}
