--- a/src/pages/merInfo/index.wxml
+++ b/src/pages/merInfo/index.wxml
@@ -2,160 +2,103 @@
     <view class="basic-info">
         <van-cell-group>
             <!-- 店铺图片 S -->
-            <view class="mer-images">
-                <i-grid i-class="mer-images-guid">
+            <view class="basic-info-images">
+                <i-grid i-class="basic-info-images-guid">
                     <i-grid-item i-class="grid-item">
-                        <view class="item-images-block">   
-                            <image class="item-images" mode="scaleToFill" src="http://qiniu.media.q.dfocuspace.cn/static/images/0a04de2752ba41bc8f33ec4d077b462d.jpg?imageView2/2/w/308/h/210/interlace/1/q/100" />
-                             <van-button size="mini" square type="danger" custom-class="close">删除</van-button>
-                       </view>
-                        <view class="item-images-block">
-                            <image class="item-images" mode="scaleToFill" src="http://qiniu.media.q.dfocuspace.cn/static/images/0a04de2752ba41bc8f33ec4d077b462d.jpg?imageView2/2/w/308/h/210/interlace/1/q/100" />
-                            <van-button size="mini" square type="danger" custom-class="close">删除</van-button>
+                        <view class="item-images-block" wx:for="{{merInfo.resources}}">
+                            <image class="item-images" mode="scaleToFill" src="{{item.url}}" />
+                            <van-button size="mini" square type="danger" custom-class="close">
+                                删除
+                            </van-button>
                         </view>
-                          <view class="item-images-block">
-                            <image class="item-images" mode="scaleToFill" src="http://qiniu.media.q.dfocuspace.cn/static/images/0a04de2752ba41bc8f33ec4d077b462d.jpg?imageView2/2/w/308/h/210/interlace/1/q/100" />
-                            <van-button size="mini" square type="danger" custom-class="close">删除</van-button>
-                        </view>
-                           <view class="item-images-block">
-                            <image class="item-images" mode="scaleToFill" src="http://qiniu.media.q.dfocuspace.cn/static/images/0a04de2752ba41bc8f33ec4d077b462d.jpg?imageView2/2/w/308/h/210/interlace/1/q/100" />
-                            <van-button size="mini" square type="danger" custom-class="close">删除</van-button>
-                        </view>
-                        <view class="item-images-block">
-                            <image class="item-images" mode="scaleToFill" src="http://qiniu.media.q.dfocuspace.cn/static/images/0a04de2752ba41bc8f33ec4d077b462d.jpg?imageView2/2/w/308/h/210/interlace/1/q/100" />
-                            <van-button size="mini" square type="danger" custom-class="close">删除</van-button>
-                        </view>
-                        <view class="item-images-block item-images-block-add">
+                        <view class="item-images-block item-images-block-add" bindtap="merImageUpload">
                             <view class="add">
-                                <van-icon name="plus" size="50rpx"/>
+                                <van-icon name="plus" size="50rpx" />
                             </view>
                         </view>
-                   </i-grid-item > 
+                    </i-grid-item>
                 </i-grid>
             </view>
             <!-- 店铺图片 E -->
-            <van-field value="{{ message }}" label="店铺名称" type="textarea" placeholder="请输入店铺名称" autosize border="{{ false }}" />
-            <van-cell
-                title="地区"
-                title-width="70px"
-                icon="location-o"  
-                on
-                is-link
-            > 
-            <view class="address-region">
-                <picker mode="region" bindchange="onChangeRegion" class="address-region-block" value="{{region}}" custom-item="{{customItem}}">
-                <view class="address-region-value">
-                    <block wx:if="{{region.length>0}}" >
-                    {{region[0]}}，{{region[1]}}，{{region[2]}}
+
+            <van-field value="{{ merInfo.name }}" label="店铺名称" type="textarea" placeholder="请输入店铺名称" autosize border="{{ false }}" />
+            <van-cell title="地区" title-width="70px" icon="location-o" on is-link>
+                <view class="address-region">
+                    <picker mode="region" bindchange="onChangeRegion" class="address-region-block" value="{{region}}" custom-item="{{customItem}}">
+                        <view class="address-region-value">
+                            <block wx:if="{{region.length>0}}">
+                                {{region[0]}}，{{region[1]}}，{{region[2]}}
+                            </block>
+                            <block wx:else>请选择</block>
+                        </view>
+                    </picker>
+                </view>
+            </van-cell>
+            <van-cell title="地址选择" icon="location-o" is-link bind:click="onAddressClick" />
+            <van-field value="{{ merInfo.address.city }} {{merInfo.address.region}} {{merInfo.address.town}}" label="详细地址" type="textarea" placeholder="请输入店铺详细地址" autosize border="{{ false }}" />
+            <van-field value="{{ merInfo.phones[0] }}" label="联系电话" placeholder="请输入手机号" border="{{ false }}" />
+            <van-cell title="营业时间" title-width="70px">
+                <view class="open-time">
+                    <picker mode="time" value="{{merInfo.businessTime.startTime}}" bindchange="onChangeStartTime" class="open-time-picker">
+                        <view class="open-time-value">{{merInfo.businessTime.startTime}}</view>
+                    </picker>
+                    <block>--</block>
+                    <picker mode="time" value="{{merInfo.businessTime.endTime}}" bindchange="onChangeEndTime" class="open-time-picker">
+                        <view class="open-time-value">{{merInfo.businessTime.endTime}}</view>
+                    </picker>
+                </view>
+            </van-cell>
+            <view class="tag-info">
+                <van-cell title="标签" is-link value="选择标签(可选)" bind:click="onClickSelectTag" />
+                <view class="popup-tag-list">
+                    <block wx:for="{{tabList}}">
+                        <van-tag custom-class="custom-van-tag" color="#f2826a" round>
+                            {{item}}
+                        </van-tag>
                     </block>
-                    <block wx:else>
-                        请选择 
-                    </block> 
                 </view>
-                </picker>
             </view>
-
-            </van-cell>
-           <van-cell title="地址选择" icon="location-o" is-link bind:click="onAddressClick"/>
-           <van-field value="{{ message }}" label="详细地址" type="textarea" placeholder="请输入店铺详细地址" autosize border="{{ false }}" />
-
-         <van-field
-            value="{{ phone }}"
-            label="联系电话"
-            placeholder="请输入手机号" 
-            border="{{ false }}"
-        />
-         
-            <van-cell title="营业时间"   title-width="70px">
-                <view class="open-time"> 
-                    <picker
-                        mode="time"
-                        value="{{businessStartTime}}"
-                        
-                        bindchange="onChangeStartTime"
-                        class="open-time-picker"
-                    >
-                        <view class="open-time-value">
-                         {{businessStartTime}}
-                        </view>
-                    </picker> <block>--</block>
-                    <picker
-                        mode="time"
-                        value="{{businessEndTime}}"
-                        
-                        bindchange="onChangeEndTime"
-                        class="open-time-picker"
-                    >
-                        <view class="open-time-value">
-                            {{businessEndTime}}
-                        </view>
-                    </picker> 
-                </view>
-            </van-cell>
-
-        <view class="tag-info">
-            <van-cell title="标签" is-link value="选择标签(可选)" bind:click="onClickSelectTag"/>
-            <view class="popup-tag-list">
-                 <block wx:for="{{tabList}}">
-                    <van-tag custom-class="custom-van-tag"  color="#f2826a" round>{{item}}</van-tag>
-                </block>
-            </view>
-        </view>
-      
-       <van-button custom-class="but-save" size="large" type="danger">保存</van-button>
+            <van-button custom-class="but-save" size="large" type="danger">保存</van-button>
         </van-cell-group>
     </view>
-
-
- 
-<!--标签选择 S--> 
-<van-popup
-  show="{{ tabData.show }}"
-  position="right"
-  overlay="{{ true }}"
-  z-index="999"
- custom-class="popup-tag"
-  bind:close="onClose"
->
-    <view class="popup-tag-main">
-        <view class="tag-top-bottom">
-            <view class="popup-tag-close" bindtap="onClickPopupTagClose">取消 </view>
-            <view class="popup-tag-ok" bindtap="onClickPopupTagOk"> 确认</view>
-        </view>
-        
-        <van-search value="{{ tabData.tabNewStr }}"  placeholder="添加店铺的标签" bind:search="onTagSearch" />
-
-        <view class="popup-tag-new" style="{{tabData.hideNew?'display:none;':'display:inline'}}">
-            <view class="popup-tag-text">创建新标签</view>
-            <view class="popup-tag-list"> 
-                <van-button bind:click="onClickTag"  plain round   custom-class="custom-button-tag" type="danger">{{tabData.tabNewStr}}</van-button>
-                <!-- <van-tag bind:click="onClickTag" custom-class="custom-van-tag"  color="#f2826a" plain>{{tabData.tabNewStr}}</van-tag> -->
+    <!-- 标签选择 弹出层 S -->
+    <van-popup show="{{ tabData.show }}" position="right" overlay="{{ true }}" z-index="999" custom-class="popup-tag" bind:close="onClose">
+        <view class="popup-tag-main">
+            <view class="tag-top-bottom">
+                <view class="popup-tag-close" bindtap="onClickPopupTagClose">取消</view>
+                <view class="popup-tag-ok" bindtap="onClickPopupTagOk">确认</view>
+            </view>
+            <van-search value="{{ tabData.tabNewStr }}" placeholder="添加店铺的标签" bind:search="onTagSearch" />
+            <view class="popup-tag-new" style="{{tabData.hideNew?'display:none;':'display:inline'}}">
+                <view class="popup-tag-text">创建新标签</view>
+                <view class="popup-tag-list">
+                    <van-button bind:click="onClickTag" plain round custom-class="custom-button-tag" type="danger">
+                        {{tabData.tabNewStr}}
+                    </van-button>
+                    <!-- <van-tag bind:click="onClickTag" custom-class="custom-van-tag"  color="#f2826a" plain>{{tabData.tabNewStr}}</van-tag> -->
+                </view>
+            </view>
+            <view class="popup-tag-select" style="{{tabData.hideSelect?'display:none;':'display:inline'}}">
+                <view class="popup-tag-text">已选标签</view>
+                <view class="popup-tag-list">
+                    <block wx:for="{{tabData.tagList}}">
+                        <van-tag data-value="{{item}}" bindtap="onClickDeleteTag" custom-class="custom-van-tag" color="#f2826a" round>
+                            {{item}}
+                        </van-tag>
+                    </block>
+                </view>
+            </view>
+            <view class="popup-tag-hot" style="{{tabData.hideTot?'display:none;':'display:inline'}}">
+                <view class="popup-tag-text">热门标签</view>
+                <view class="popup-tag-list">
+                    <block wx:for="{{tabData.tagHotList}}">
+                        <van-tag data-value="{{item}}" bindtap="onClickHotTag" custom-class="custom-van-tag" color="#f2826a" round>
+                            {{item}}
+                        </van-tag>
+                    </block>
+                </view>
             </view>
         </view>
-       
-       <view class="popup-tag-select" style="{{tabData.hideSelect?'display:none;':'display:inline'}}">
-           <view class="popup-tag-text">已选标签</view> 
-            <view class="popup-tag-list">
-                <block wx:for="{{tabData.tagList}}">
-                    <van-tag data-value="{{item}}" bindtap="onClickDeleteTag" custom-class="custom-van-tag"  color="#f2826a" round>{{item}}</van-tag>
-                </block>
-            </view>
-        </view>
-
-        <view class="popup-tag-hot" style="{{tabData.hideTot?'display:none;':'display:inline'}}">
-            <view class="popup-tag-text">热门标签</view> 
-            <view class="popup-tag-list">
-                 <block wx:for="{{tabData.tagHotList}}">
-                    <van-tag data-value="{{item}}" bindtap="onClickHotTag" custom-class="custom-van-tag"  color="#f2826a" round>{{item}}</van-tag>
-                </block>
-            </view>
-        </view>
-        
-    </view>
-
-
-</van-popup>
-<!--标签选择 E-->
- 
-
+    </van-popup>
+    <!-- 标签选择 弹出层 E -->
 </view>
