--- a/src/pages/productAdd/index.wxss
+++ b/src/pages/productAdd/index.wxss
@@ -1,7 +1,3 @@
-.basic-info {
-  z-index: 50;
-}
-
 .basic-info .basic-info-images .basic-info-images-guid .grid-item {
   margin: 0;
   padding: 0;
@@ -31,13 +27,8 @@
 
 .basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block .add {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  height: 50rpx;
-  width: 50rpx;
-  margin: auto;
+  top: 50%;
+  left: 35%;
 }
 
 .basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block-add {
@@ -48,61 +39,39 @@
   background-color: #f2f3f5;
 }
 
-.basic-info .address-region {
-  display: inline-block;
-  text-align: left;
-  width: 1000%;
+.c-popup-view {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 9999;
+  pointer-events: none;
+  background-color: #1989fa;
+  overflow: hidden;
 }
 
-.basic-info .address-region .address-region-value {
-  display: inline-block;
-  color: #333;
-}
-
-.basic-info .address-region .address-region-block {
+.demo-container {
+  height: 100%;
   width: 100%;
 }
 
-.basic-info .open-time {
-  display: inline-block;
-  text-align: left;
+.demo-container-view {
   width: 100%;
-  position: relative;
 }
 
-.basic-info .open-time .open-time-picker {
-  width: 135rpx;
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
+.modal {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
 }
 
-.basic-info .open-time .open-time-picker .open-time-value {
-  display: inline-block;
-  color: #333;
-}
-
-.basic-info .but-save {
-  margin-top: 50rpx;
-}
-
-.display_none {
-  display: none;
-}
-
-.display_none {
-  visibility: hidden;
-}
-
-.datetime-picker {
-  position: sticky;
-  top: 0px;
-}
-
-.tag-info .custom-van-tag {
-  margin-left: 20rpx;
-  margin-top: 20rpx;
-  font-size: 30rpx;
+.test-modal {
+  position: absolute;
 }
 
 .popup-tag {
@@ -163,4 +132,24 @@
   font-size: 30rpx;
   color: rgba(69, 90, 100, 0.6);
   padding: 35rpx 15rpx 15rpx;
+}
+
+.test-radio {
+  display: inline-block;
+  height: 50rpx;
+  margin-left: 100rpx;
+  padding-top: 10rpx;
+  padding-bottom: 10rpx;
+}
+
+.p-attribute .p-attribute-add {
+  width: 80%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.p-attribute .p-attribute-delete {
+  width: 15%;
+  display: inline-block;
+  vertical-align: middle;
 }
