--- a/src/pages/merInfo/index.wxss
+++ b/src/pages/merInfo/index.wxss
@@ -2,6 +2,10 @@
   z-index: 50;
 }
 
+.basic-info .basic-info-images {
+  margin-bottom: 30rpx;
+}
+
 .basic-info .basic-info-images .basic-info-images-guid .grid-item {
   margin: 0;
   padding: 0;
