--- a/src/pages/profile/index.wxss
+++ b/src/pages/profile/index.wxss
@@ -1,5 +1,34 @@
-.header {
-  width: 100%;
-  height: 200rpx;
-  background-color: darkgrey;
+Page .shader {
+  height: 256rpx;
+  background-image: linear-gradient(45deg, #ff9700, #ed1c24);
+  color: #fff;
+  padding-top: 120rpx;
+  box-shadow: 0px 0px 10px #ff9700;
+}
+
+Page .havatar {
+  height: 100%;
+  margin-left: 50rpx;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+Page .hnamer {
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 50rpx;
+}
+
+Page .hnamer text {
+  height: 60rpx;
+  line-height: 60rpx;
+  display: inline-block;
+}
+
+Page .havatar-avatar {
+  width: 160rpx;
+  height: 160rpx;
+  line-height: 160rpx;
+  border-radius: 80rpx;
 }
