--- a/src/pages/productAdd/index.scss
+++ b/src/pages/productAdd/index.scss
@@ -191,3 +191,55 @@
   .but {
   }
 }
+
+.much-sku {
+  .sku-image-row {
+    .sku-upload-image {
+      width: 130rpx;
+      height: 130rpx;
+      margin-top: 7rpx;
+      float: left;
+      .add-but:active {
+        background-color: #f2f3f5;
+      }
+      .add-but {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center; /*水平居中*/
+        background-color: #fff;
+      }
+      .v-block {
+        width: 100%;
+        height: 100%;
+        background-color: #f2f3f5;
+        position: relative;
+        .v-block-image {
+          width: 100%;
+          height: 100%;
+        }
+        .close {
+          background-color: red;
+          color: #fff;
+          text-align: center;
+          width: 25rpx;
+          height: 28rpx;
+          line-height: 25rpx;
+          position: absolute;
+          top: 0;
+          right: 0;
+        }
+      }
+    }
+    .hint-text {
+      color: #969799;
+      font-size: 14px;
+      float: right;
+      right: 0;
+      height: 130rpx;
+      line-height: 130rpx;
+      display: inherit-block;
+    }
+  }
+}
