--- a/src/pages/productAdd/index.wxml
+++ b/src/pages/productAdd/index.wxml
@@ -11,7 +11,7 @@
                                 删除
                             </van-button>
                         </view>
-                        <view wx:if="{{productInfo.resources.length<6}}" class="item-images-block item-images-block-add" bindtap="merImageUpload">
+                        <view wx:if="{{productInfo.resources.length<6}}" class="item-images-block item-images-block-add" bindtap="onImageUpload" data-callback="{{'merImagesLoad'}}">
                             <view class="add">
                                 <van-icon name="plus" size="50rpx" />
                             </view>
@@ -21,80 +21,85 @@
             </view>
             <!-- 店铺图片 E -->
             <!-- 商品类目选择 -->
-            <van-cell title="商品类目" is-link value="请选择" bind:click="onClickSelectCategory" />
+            <van-cell title="商品类目" is-link value="请选择" bind:input="onClickSelectCategory" />
             <!-- 商品名称 -->
-            <van-field value="{{ productInfo.name }}" label="商品名称" type="textarea" placeholder="请输入商品名称" autosize border="{{ false }}" bind:input="onChangeProInfoName" />
+            <van-field value="{{ productInfo.name }}" label="商品名称" required type="textarea" placeholder="请输入商品名称" autosize border="{{ false }}" bind:input="onChangeProInfoName" />
             <!-- 商品关键字 -->
             <!-- <van-field value="{{ product.keywords }}" label="商品关键字" type="textarea" placeholder="商品简称(可选)" autosize border="{{ false }}" /> -->
             <!-- 商品描述 -->
-            <van-field value="{{ productInfo.description }}" label="商品描述" type="textarea" placeholder="请输入商品描述" autosize border="{{ false }}" bind:input="onChangeProInfoDesc" />
+            <van-field value="{{ productInfo.description }}" label="商品描述" required type="textarea" placeholder="请输入商品描述" autosize border="{{ false }}" bind:input="onChangeProInfoDesc" />
+            <!-- 当前销售价 -->
+            <van-field value="{{productInfo.currentPrice}}" type="digit" bind:input="onChangeProInfoCurrentPrice" bind:blur="onBlurProInfoCurrentPrice" label="当前销售价" placeholder="销售价" />
             <!-- 商品标签 -->
             <!-- <van-field value="{{ product.tags }}" label="商品标签" type="textarea" placeholder="商品标签(可选)" autosize border="{{ false }}" /> -->
             <!-- 商品宽 W、高 H、深度 D、重量 -->
-            <van-field value="{{ productInfo.width }}" label="商品宽" placeholder="(可选)" />
-            <van-field value="{{ productInfo.height }}" label="商品高" placeholder="(可选)" />
-            <van-field value="{{ productInfo.depth }}" label="商品长" placeholder="(可选)" />
-            <van-field value="{{ productInfo.weight }}" label="商品重量" placeholder="(可选)" />
+            <van-field value="{{ productInfo.width }}" type="digit" bind:input="onChangeProInfoWidth" label="商品宽" placeholder="(可选)" />
+            <van-field value="{{ productInfo.height }}" type="digit" bind:input="onChangeProInfoHeight" label="商品高" placeholder="(可选)" />
+            <van-field value="{{ productInfo.depth }}" type="digit" bind:input="onChangeProInfoDepth" label="商品长" placeholder="(可选)" />
+            <van-field value="{{ productInfo.weight }}" type="digit" bind:input="onChangeProInfoWeight" label="商品重量" placeholder="(可选)" />
             <!-- 商品 原始价格、最低价 -->
-            <van-field value="{{ productInfo.original_price }}" label="商品原始价" placeholder="(可选)" />
-            <van-field value="{{ productInfo.min_price }}" label="商品最低价" placeholder="(可选)" />
-            <van-field value="{{ productInfo.max_price }}" label="商品最高价" placeholder="(可选)" />
-            <van-field value="{{ productInfo.current_price }}" label="当前销售价" placeholder="(可选)" />
+            <van-field value="{{ productInfo.originalPrice }}" type="digit" bind:input="onChangeProInfoOriginalPrice" label="商品原始价" placeholder="(可选)" />
+            <van-field value="{{ productInfo.minPrice }}" type="digit" bind:input="onChangeProInfoMinPrice" label="商品最低价" placeholder="(可选)" />
+            <van-field value="{{ productInfo.maxPrice }}" type="digit" bind:input="onChangeProInfoMaxPrice" label="商品最高价" placeholder="(可选)" />
             <!-- 商品 规格 添加 S -->
-            <!-- (右滑删除) -->
-            <!-- <van-cell title="商品规格添加" clickable="{{true}}" value="">
-                <van-icon slot="right-icon" name="plus" class="custom-icon" />
-              <view slot="title">
-                    <view class="text-colo"></view>
-                    商品规格添加
-                </view>
-            </van-cell> -->
-            <view class="p-attribute" wx:if="{{singleSku}}">
-                <van-field value="{{ productInfo.sku[0].price }}" label="价格" placeholder="请输入价格(单位元)" />
-                <van-field value="{{ productInfo.sku[0].sort }}" label="库存" placeholder="请输入库存(最低 1)" />
-            </view>
             <i-panel title="规格信息" hide-border="{{true}}">
                 <view>
-                    <van-field value="{{ productInfo.sku[0].price }}" label="价格" placeholder="请输入价格(单位元)" />
-                    <van-field value="{{ productInfo.sku[0].sort }}" label="库存" placeholder="请输入库存(最低 1)" />
+                    <view class="single-sku" wx:if="{{singleSku}}">
+                        <van-field value="{{ productInfo.sku[0].price }}" type="digit" label="价格" bind:input="onChangeMuchSkuPrice" data-index="{{0}}" placeholder="请输入价格(单位元)" />
+                        <van-field value="{{ productInfo.sku[0].sort }}" type="digit" label="库存" bind:input="onChangeMuchSkuSort" data-index="{{0}}" placeholder="请输入库存(最低 1)" />
+                    </view>
+                    <view class="much-sku" wx:else>
+                        <block wx:for="{{productInfo.sku}}">
+                            <i-swipeout i-class="i-swipeout-demo-item" actions="{{actions}}" bind:change="handleCancel2" data-id="{{item.id}}">
+                                <view slot="content" operate-width="83">
+                                    <view slot="title">
+                                        <view class="p-attribute">
+                                            <van-field value="{{ item.attributeValue }}" bind:input="onChangeMuchSkuAtt" data-index="{{index}}" label="规格" placeholder="请输入规格名称(如:1斤...)" />
+                                            <van-field value="{{ item.price }}" type="digit" bind:input="onChangeMuchSkuPrice" data-index="{{index}}" label="价格" placeholder="请输入价格(单位元)" />
+                                            <van-field value="{{ item.sort }}" type="digit" bind:input="onChangeMuchSkuSort" data-index="{{index}}" label="库存" placeholder="请输入库存(最低 1)" />
+                                            <view class="sku-image-row">
+                                                <view class="sku-upload-image">
+                                                    <view class="v-block" wx:if="{{item.resourceId>0}}">
+                                                        <image class="v-block-image" mode="scaleToFill" src="{{item.images.url}}" />
+                                                        <view class="close" data-id="{{item.id}}" bindtap="skuImagesDelete" data-index="{{index}}">
+                                                            x
+                                                        </view>
+                                                    </view>
+                                                    <view wx:else class="add-but" bindtap="onImageUpload" data-callback="{{'skuImagesLoad'}}" data-index="{{index}}">
+                                                        <view>
+                                                            <van-icon name="plus" size="50rpx" />
+                                                        </view>
+                                                    </view>
+                                                </view>
+                                                <view class="hint-text" wx:if="{{!singleSku}}">
+                                                    (左滑删除)
+                                                </view>
+                                            </view>
+                                        </view>
+                                    </view>
+                                </view>
+                            </i-swipeout>
+                        </block>
+                    </view>
                     <view class="att-view">
-                        <van-button custom-class="but" size="mini">添加</van-button>
+                        <van-button custom-class="but" bind:click="onClickAttAdd">添加</van-button>
                     </view>
                 </view>
             </i-panel>
-            <!-- <van-radio-group value="{{ test.radio }}" bind:change="onRadioChange">
-                <view class="test-radio">
-                    <van-radio name="1">单规格</van-radio>
-                </view>
-                <view class="test-radio">
-                    <van-radio name="2">多规格</van-radio>
-                </view>
-            </van-radio-group> -->
-            <!-- <i-swipeout i-class="i-swipeout-demo-item" actions="{{actions}}">
-                <view slot="content" operate-width="83">
-                    <view slot="title">
-                        <view class="p-attribute">
-                            <van-field value="{{ phone }}" label="规格" placeholder="请输入规格名称(如:1斤...)" />
-                            <van-field value="{{ phone }}" label="价格" placeholder="请输入价格(单位元)" />
-                            <van-field value="{{ phone }}" label="库存" placeholder="请输入库存(最低 1)" />
-                            <van-cell title="图片" is-link />
-                        </view>
-                    </view>
-                </view>
-            </i-swipeout> -->
             <!-- 商品 规格 添加 E -->
             <!-- 商品详情 S -->
             <!-- <rich-text nodes="{{nodes}}" bindtap="tap"></rich-text> -->
             <!-- <van-cell title="商品详情" is-link url="/pages/webView/index?url=http://127.0.0.1:7080/static/demo/" /> -->
-            <view style="margin-top: 100rpx;">123123</view>
-            <van-cell title="商品详情编辑" is-link link-type="navigateTo" url="/pages/editor/editor?content" />
-            <view class="t-richtext">
-                <rich-text style=" word-break: break-all;" nodes="{{productInfo.content}}"></rich-text>
-            </view>
+            <i-panel title="商品详情" hide-border="{{true}}">
+                <van-cell title="详情编辑" is-link link-type="navigateTo" url="/pages/editor/editor?content" />
+                <view class="t-richtext">
+                    <rich-text style=" word-break: break-all;" nodes="{{productInfo.content}}"></rich-text>
+                </view>
+            </i-panel>
             <!-- 商品详情 E -->
         </van-cell-group>
     </view>
-    <van-button type="default" custom-class="save-but" bind:click="">保存</van-button>
+    <van-button type="default" custom-class="save-but" bind:click="saveSubmit">保存</van-button>
 </view>
 <!-- 小程序最新的富文本编辑器 发布了.... -->
 <!-- <editor id="editor" class="ql-container" placeholder="{{'提示信息'}}" showImgSize showImgToolbar showImgResize bindstatuschange="onStatusChange" read-only="{{readOnly}}" bindready="onEditorReady"></editor> -->
