--- a/src/pages/productAdd/index.wxss
+++ b/src/pages/productAdd/index.wxss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .basic-info .basic-info-images {
   margin-bottom: 30rpx;
 }
@@ -178,4 +179,59 @@
   background: #f7f7f7;
   display: flex;
   justify-content: flex-end;
+}
+
+.much-sku .sku-image-row .sku-upload-image {
+  width: 130rpx;
+  height: 130rpx;
+  margin-top: 7rpx;
+  float: left;
+}
+
+.much-sku .sku-image-row .sku-upload-image .add-but:active {
+  background-color: #f2f3f5;
+}
+
+.much-sku .sku-image-row .sku-upload-image .add-but {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*水平居中*/
+  background-color: #fff;
+}
+
+.much-sku .sku-image-row .sku-upload-image .v-block {
+  width: 100%;
+  height: 100%;
+  background-color: #f2f3f5;
+  position: relative;
+}
+
+.much-sku .sku-image-row .sku-upload-image .v-block .v-block-image {
+  width: 100%;
+  height: 100%;
+}
+
+.much-sku .sku-image-row .sku-upload-image .v-block .close {
+  background-color: red;
+  color: #fff;
+  text-align: center;
+  width: 25rpx;
+  height: 28rpx;
+  line-height: 25rpx;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.much-sku .sku-image-row .hint-text {
+  color: #969799;
+  font-size: 14px;
+  float: right;
+  right: 0;
+  height: 130rpx;
+  line-height: 130rpx;
+  display: inherit-block;
 }
